--- a/zuul.d/project-templates.yaml
+++ b/zuul.d/project-templates.yaml
@@ -45,12 +45,14 @@
         - openstack-ansible-deploy-aio_lxc-centos-9-stream:
             voting: false
         - openstack-ansible-deploy-aio_lxc-rockylinux-9
+        - openstack-ansible-deploy-aio_lxc-centos-10-stream
         - openstack-ansible-deploy-aio_lxc-debian-bookworm
         - openstack-ansible-deploy-aio_lxc-ubuntu-jammy
         - openstack-ansible-deploy-aio_lxc-ubuntu-noble
     gate:
       jobs:
         - openstack-ansible-deploy-aio_lxc-rockylinux-9
+        - openstack-ansible-deploy-aio_lxc-centos-10-stream
         - openstack-ansible-deploy-aio_lxc-debian-bookworm
         - openstack-ansible-deploy-aio_lxc-ubuntu-jammy
         - openstack-ansible-deploy-aio_lxc-ubuntu-noble
@@ -97,6 +99,7 @@
             voting: false
         - openstack-ansible-deploy-infra_lxc-rockylinux-9
         - openstack-ansible-deploy-infra_lxc_tls-rockylinux-9
+        - openstack-ansible-deploy-infra_lxc-centos-10-stream
         - openstack-ansible-deploy-infra_lxc-debian-bookworm
         - openstack-ansible-deploy-infra_lxc-ubuntu-jammy
         - openstack-ansible-deploy-infra_lxc_stepca-ubuntu-jammy
@@ -108,6 +111,7 @@
       jobs:
         - openstack-ansible-deploy-infra_lxc-rockylinux-9
         - openstack-ansible-deploy-infra_lxc_tls-rockylinux-9
+        - openstack-ansible-deploy-infra_lxc-centos-10-stream
         - openstack-ansible-deploy-infra_lxc-debian-bookworm
         - openstack-ansible-deploy-infra_lxc-ubuntu-jammy
         - openstack-ansible-deploy-infra_lxc_stepca-ubuntu-jammy
@@ -124,11 +128,13 @@
     check:
       jobs:
         - openstack-ansible-deploy-infra_distro_lxc-rockylinux-9
+        - openstack-ansible-deploy-infra_distro_lxc-centos-10-stream
         - openstack-ansible-deploy-infra_distro_lxc-debian-bookworm
         - openstack-ansible-deploy-infra_distro_lxc-ubuntu-noble
     gate:
       jobs:
         - openstack-ansible-deploy-infra_distro_lxc-rockylinux-9
+        - openstack-ansible-deploy-infra_distro_lxc-centos-10-stream
         - openstack-ansible-deploy-infra_distro_lxc-debian-bookworm
         - openstack-ansible-deploy-infra_distro_lxc-ubuntu-noble
 
@@ -137,12 +143,14 @@
     check:
       jobs:
         - openstack-ansible-deploy-hosts_lxc-rockylinux-9
+        - openstack-ansible-deploy-hosts_lxc-centos-10-stream
         - openstack-ansible-deploy-hosts_lxc-debian-bookworm
         - openstack-ansible-deploy-hosts_lxc-ubuntu-jammy
         - openstack-ansible-deploy-hosts_lxc-ubuntu-noble
     gate:
       jobs:
         - openstack-ansible-deploy-hosts_lxc-rockylinux-9
+        - openstack-ansible-deploy-hosts_lxc-centos-10-stream
         - openstack-ansible-deploy-hosts_lxc-debian-bookworm
         - openstack-ansible-deploy-hosts_lxc-ubuntu-jammy
         - openstack-ansible-deploy-hosts_lxc-ubuntu-noble
@@ -155,12 +163,14 @@
     check:
       jobs:
         - openstack-ansible-deploy-hosts_metal-rockylinux-9
+        - openstack-ansible-deploy-hosts_metal-centos-10-stream
         - openstack-ansible-deploy-hosts_metal-debian-bookworm
         - openstack-ansible-deploy-hosts_metal-ubuntu-jammy
         - openstack-ansible-deploy-hosts_metal-ubuntu-noble
     gate:
       jobs:
         - openstack-ansible-deploy-hosts_metal-rockylinux-9
+        - openstack-ansible-deploy-hosts_metal-centos-10-stream
         - openstack-ansible-deploy-hosts_metal-debian-bookworm
         - openstack-ansible-deploy-hosts_metal-ubuntu-jammy
         - openstack-ansible-deploy-hosts_metal-ubuntu-noble
@@ -190,6 +200,7 @@
     name: openstack-ansible-deploy-aio_metal-jobs
     check:
       jobs:
+        - openstack-ansible-deploy-aio_metal-centos-10-stream
         - openstack-ansible-deploy-aio_metal-debian-bookworm
         - openstack-ansible-deploy-aio_metal-centos-9-stream:
             voting: false
@@ -208,6 +219,7 @@
 
     gate:
       jobs:
+        - openstack-ansible-deploy-aio_metal-centos-10-stream
         - openstack-ansible-deploy-aio_metal-debian-bookworm
         - openstack-ansible-deploy-aio_metal-rockylinux-9
         - openstack-ansible-deploy-aio_metal-ubuntu-jammy
@@ -223,12 +235,14 @@
         - openstack-ansible-deploy-aio_telemetry_metal-centos-9-stream:
             voting: false
         - openstack-ansible-deploy-aio_telemetry_metal-rockylinux-9
+        - openstack-ansible-deploy-aio_telemetry_metal-centos-10-stream
         - openstack-ansible-deploy-aio_telemetry_metal-debian-bookworm
         - openstack-ansible-deploy-aio_telemetry_metal-ubuntu-jammy
         - openstack-ansible-deploy-aio_telemetry_metal-ubuntu-noble
     gate:
       jobs:
         - openstack-ansible-deploy-aio_telemetry_metal-rockylinux-9
+        - openstack-ansible-deploy-aio_telemetry_metal-centos-10-stream
         - openstack-ansible-deploy-aio_telemetry_metal-debian-bookworm
         - openstack-ansible-deploy-aio_telemetry_metal-ubuntu-jammy
         - openstack-ansible-deploy-aio_telemetry_metal-ubuntu-noble
