--- a/zuul.d/nodesets.yaml
+++ b/zuul.d/nodesets.yaml
@@ -24,3 +24,9 @@
     nodes:
       - name: centos-10-stream
         label: centos-10-stream-8GB
+
+- nodeset:
+    name: osa-rockylinux-10
+    nodes:
+      - name: rockylinux-10
+        label: rockylinux-10-8GB
