--- a/zuul.d/project-templates.yaml
+++ b/zuul.d/project-templates.yaml
@@ -43,11 +43,13 @@
       jobs:
         - openstack-ansible-deploy-aio_lxc-centos-10-stream
         - openstack-ansible-deploy-aio_lxc-debian-bookworm
+        - openstack-ansible-deploy-aio_lxc-rockylinux-10
         - openstack-ansible-deploy-aio_lxc-ubuntu-noble
     gate:
       jobs:
         - openstack-ansible-deploy-aio_lxc-centos-10-stream
         - openstack-ansible-deploy-aio_lxc-debian-bookworm
+        - openstack-ansible-deploy-aio_lxc-rockylinux-10
         - openstack-ansible-deploy-aio_lxc-ubuntu-noble
     periodic:
       jobs:
@@ -78,6 +80,8 @@
       jobs:
         - openstack-ansible-deploy-infra_lxc-centos-10-stream
         - openstack-ansible-deploy-infra_lxc-debian-bookworm
+        - openstack-ansible-deploy-infra_lxc-rockylinux-10
+        - openstack-ansible-deploy-infra_lxc_tls-rockylinux-10
         - openstack-ansible-deploy-infra_lxc-ubuntu-noble
         - openstack-ansible-deploy-infra_lxc_stepca-ubuntu-noble
         - openstack-ansible-deploy-infra_lxc_tls-ubuntu-noble
@@ -85,6 +89,8 @@
       jobs:
         - openstack-ansible-deploy-infra_lxc-centos-10-stream
         - openstack-ansible-deploy-infra_lxc-debian-bookworm
+        - openstack-ansible-deploy-infra_lxc-rockylinux-10
+        - openstack-ansible-deploy-infra_lxc_tls-rockylinux-10
         - openstack-ansible-deploy-infra_lxc-ubuntu-noble
         - openstack-ansible-deploy-infra_lxc_stepca-ubuntu-noble
         - openstack-ansible-deploy-infra_lxc_tls-ubuntu-noble
@@ -99,10 +105,12 @@
         - openstack-ansible-deploy-infra_distro_lxc-centos-10-stream:
             voting: false
         - openstack-ansible-deploy-infra_distro_lxc-debian-bookworm
+        - openstack-ansible-deploy-infra_distro_lxc-rockylinux-10
         - openstack-ansible-deploy-infra_distro_lxc-ubuntu-noble
     gate:
       jobs:
         - openstack-ansible-deploy-infra_distro_lxc-debian-bookworm
+        - openstack-ansible-deploy-infra_distro_lxc-rockylinux-10
         - openstack-ansible-deploy-infra_distro_lxc-ubuntu-noble
 
 - project-template:
@@ -111,11 +119,13 @@
       jobs:
         - openstack-ansible-deploy-hosts_lxc-centos-10-stream
         - openstack-ansible-deploy-hosts_lxc-debian-bookworm
+        - openstack-ansible-deploy-hosts_lxc-rockylinux-10
         - openstack-ansible-deploy-hosts_lxc-ubuntu-noble
     gate:
       jobs:
         - openstack-ansible-deploy-hosts_lxc-centos-10-stream
         - openstack-ansible-deploy-hosts_lxc-debian-bookworm
+        - openstack-ansible-deploy-hosts_lxc-rockylinux-10
         - openstack-ansible-deploy-hosts_lxc-ubuntu-noble
     periodic:
       jobs:
@@ -127,11 +137,13 @@
       jobs:
         - openstack-ansible-deploy-hosts_metal-centos-10-stream
         - openstack-ansible-deploy-hosts_metal-debian-bookworm
+        - openstack-ansible-deploy-hosts_metal-rockylinux-10
         - openstack-ansible-deploy-hosts_metal-ubuntu-noble
     gate:
       jobs:
         - openstack-ansible-deploy-hosts_metal-centos-10-stream
         - openstack-ansible-deploy-hosts_metal-debian-bookworm
+        - openstack-ansible-deploy-hosts_metal-rockylinux-10
         - openstack-ansible-deploy-hosts_metal-ubuntu-noble
     periodic:
       jobs:
@@ -141,9 +153,11 @@
     name: openstack-ansible-deploy-hosts_distro_lxc-jobs
     check:
       jobs:
+        - openstack-ansible-deploy-hosts_distro_lxc-rockylinux-10
         - openstack-ansible-deploy-hosts_distro_lxc-ubuntu-noble
     gate:
       jobs:
+        - openstack-ansible-deploy-hosts_distro_lxc-rockylinux-10
         - openstack-ansible-deploy-hosts_distro_lxc-ubuntu-noble
 
 - project-template:
@@ -159,6 +173,8 @@
       jobs:
         - openstack-ansible-deploy-aio_metal-centos-10-stream
         - openstack-ansible-deploy-aio_metal-debian-bookworm
+        - openstack-ansible-deploy-aio_metal-rockylinux-10
+        - openstack-ansible-deploy-aio_metal_tls-rockylinux-10
         - openstack-ansible-deploy-aio_metal-ubuntu-noble
         - openstack-ansible-deploy-aio_metal_tls-ubuntu-noble
         - openstack-ansible-upgrade-aio_metal-ubuntu-noble
@@ -168,6 +184,8 @@
       jobs:
         - openstack-ansible-deploy-aio_metal-centos-10-stream
         - openstack-ansible-deploy-aio_metal-debian-bookworm
+        - openstack-ansible-deploy-aio_metal-rockylinux-10
+        - openstack-ansible-deploy-aio_metal_tls-rockylinux-10
         - openstack-ansible-deploy-aio_metal-ubuntu-noble
         - openstack-ansible-deploy-aio_metal_tls-ubuntu-noble
 
@@ -177,17 +195,20 @@
       jobs:
         - openstack-ansible-deploy-aio_telemetry_metal-centos-10-stream
         - openstack-ansible-deploy-aio_telemetry_metal-debian-bookworm
+        - openstack-ansible-deploy-aio_telemetry_metal-rockylinux-10
         - openstack-ansible-deploy-aio_telemetry_metal-ubuntu-noble
     gate:
       jobs:
         - openstack-ansible-deploy-aio_telemetry_metal-centos-10-stream
         - openstack-ansible-deploy-aio_telemetry_metal-debian-bookworm
+        - openstack-ansible-deploy-aio_telemetry_metal-rockylinux-10
         - openstack-ansible-deploy-aio_telemetry_metal-ubuntu-noble
 
 - project-template:
     name: openstack-ansible-deploy-aio_distro_metal-jobs
     check:
       jobs:
+        - openstack-ansible-deploy-aio_distro_metal-rockylinux-10
         - openstack-ansible-deploy-aio_distro_metal-ubuntu-noble
     experimental:
       jobs:
@@ -252,6 +273,7 @@
         - openstack-ansible-deploy-hosts_lxc_overlayfs-ubuntu-noble
         - openstack-ansible-deploy-hosts_lxc_btrfs-debian-bookworm
         - openstack-ansible-deploy-hosts_lxc_overlayfs-debian-bookworm
+        - openstack-ansible-deploy-hosts_lxc_overlayfs-rockylinux-10
     gate:
       jobs:
         - openstack-ansible-deploy-hosts_lxc_zfs-ubuntu-noble
@@ -259,6 +281,7 @@
         - openstack-ansible-deploy-hosts_lxc_overlayfs-ubuntu-noble
         - openstack-ansible-deploy-hosts_lxc_btrfs-debian-bookworm
         - openstack-ansible-deploy-hosts_lxc_overlayfs-debian-bookworm
+        - openstack-ansible-deploy-hosts_lxc_overlayfs-rockylinux-10
 
 - project-template:
     name: openstack-ansible-molecule
