--- a/zuul.d/jobs.yaml
+++ b/zuul.d/jobs.yaml
@@ -168,7 +168,6 @@
       This should be used only for hosts based tests.
     required-projects: *r-p-no_services
 
-
 - job:
     name: openstack-ansible-deploy-aio
     parent: openstack-ansible-deploy
@@ -306,12 +305,14 @@
       - name: openstack/rally-openstack
 
 # Ensuring overrides work
+
 - job:
     name: openstack-ansible-varstest-aio
     parent: openstack-ansible-deploy-aio
     nodeset: ubuntu-noble
 
 # Ensuring SHAs are valid
+
 - job:
     name: openstack-ansible-shastest-metal
     parent: openstack-ansible-deploy
@@ -323,6 +324,7 @@
       - ^inventory\/group_vars\/*\/source_git\.yml
 
 # Ensuring hosts setup and healthcheck-hosts playbook is valid
+
 - job:
     name: openstack-ansible-deploy-hosts_lxc-validate
     parent: openstack-ansible-deploy-hosts_lxc-ubuntu-jammy
@@ -354,6 +356,7 @@
       - ^playbooks\/zookeeper-(-install)?\.yml
 
 # Running linters check
+
 - job:
     name: openstack-ansible-linters-ubuntu-noble
     parent: openstack-ansible-deploy-aio
@@ -362,6 +365,7 @@
 
 # Experimental job for checking our AIO can deploy with
 # a different ansible version
+
 - job:
     name: openstack-ansible-deploy_with_ansible_devel-aio-ubuntu-noble
     parent: openstack-ansible-deploy-aio
@@ -375,6 +379,7 @@
 
 # Experimental job for checking our AIO can deploy with
 # a different ansible version
+
 - job:
     name: openstack-ansible-deploy_with_ansible_next-aio-ubuntu-jammy
     parent: openstack-ansible-deploy-aio
@@ -386,7 +391,8 @@
     vars:
       ansible_package: "file://{{ ansible_user_dir }}/src/github.com/ansible/ansible"
 
-# ubuntu noble
+# Ubuntu 24.04 (Noble Numbat)
+
 - job:
     name: openstack-ansible-deploy-aio_lxc-ubuntu-noble
     parent: openstack-ansible-deploy-aio
@@ -772,6 +778,7 @@
 
 
 # CentOS Stream 10
+
 - job:
     name: openstack-ansible-deploy-aio_lxc-centos-10-stream
     parent: openstack-ansible-deploy-aio
@@ -822,7 +829,7 @@
         DOCKER_REGISTRY: quay.io/gotmax23
         DOCKER_IMAGE_TAG: centos-systemd:stream10
 
-# debian bookworm
+# Debian 12 (Bookworm)
 
 - job:
     name: openstack-ansible-deploy-aio_telemetry_metal-debian-bookworm
@@ -1028,3 +1035,80 @@
       tox_environment:
         DOCKER_REGISTRY: quay.io/rockylinux
         DOCKER_IMAGE_TAG: rockylinux:9-ubi-init
+
+# Rocky Linux 10
+
+- job:
+    name: openstack-ansible-tox-molecule-rockylinux-9
+    parent: openstack-ansible-tox-molecule
+    vars:
+      tox_environment:
+        DOCKER_REGISTRY: quay.io/rockylinux
+        DOCKER_IMAGE_TAG: rockylinux:10-ubi-init
+
+- job:
+    name: openstack-ansible-deploy-aio_lxc-rockylinux-10
+    parent: openstack-ansible-deploy-aio
+    nodeset: osa-rockylinux-10
+
+- job:
+    name: openstack-ansible-deploy-infra_lxc-rockylinux-10
+    parent: openstack-ansible-deploy-aio
+    nodeset: osa-rockylinux-10
+
+- job:
+    name: openstack-ansible-deploy-infra_lxc_tls-rockylinux-10
+    parent: openstack-ansible-deploy-aio
+    nodeset: osa-rockylinux-10
+
+- job:
+    name: openstack-ansible-deploy-infra_distro_lxc-rockylinux-10
+    parent: openstack-ansible-deploy-aio-infra
+    nodeset: osa-rockylinux-10
+
+- job:
+    name: openstack-ansible-deploy-hosts_distro_lxc-rockylinux-10
+    parent: openstack-ansible-deploy-aio
+    nodeset: osa-rockylinux-10
+
+- job:
+    name: openstack-ansible-deploy-hosts_lxc-rockylinux-10
+    parent: openstack-ansible-deploy-aio
+    nodeset: osa-rockylinux-10
+
+- job:
+    name: openstack-ansible-deploy-hosts_metal-rockylinux-10
+    parent: openstack-ansible-deploy-aio
+    nodeset: osa-rockylinux-10
+
+- job:
+    name: openstack-ansible-deploy-aio_metal-rockylinux-10
+    parent: openstack-ansible-deploy-aio
+    nodeset: osa-rockylinux-10
+
+- job:
+    name: openstack-ansible-deploy-aio_metal_tls-rockylinux-10
+    parent: openstack-ansible-deploy-aio
+    nodeset: osa-rockylinux-10
+
+- job:
+    name: openstack-ansible-deploy-aio_telemetry_metal-rockylinux-10
+    parent: openstack-ansible-deploy-aio
+    nodeset: osa-rockylinux-10
+
+- job:
+    name: openstack-ansible-deploy-aio_distro_metal-rockylinux-10
+    parent: openstack-ansible-deploy-aio-distro
+    nodeset: osa-rockylinux-10
+    voting: false
+
+- job:
+    name: openstack-ansible-upgrade-aio_metal-rockylinux-10
+    parent: openstack-ansible-deploy-aio
+    nodeset: osa-rockylinux-10
+    timeout: 10800
+
+- job:
+    name: openstack-ansible-deploy-hosts_lxc_overlayfs-rockylinux-10
+    parent: openstack-ansible-deploy-aio
+    nodeset: osa-rockylinux-10
