Drop centos-10-stream distro job
RDO repo for CentOS 10 Stream does not exist for Epoxy, and will
not be created for 2025.2 either. Thus, let's set the job as NV

We temporary disable CI to resolve circular dependency

Needed-By: https://review.opendev.org/c/openstack/openstack-ansible-rabbitmq_server/+/967525
Change-Id: I25c4717fc74ba52bee78cee76c287b1a40216620
Signed-off-by: Dmitriy Rabotyagov <dmitriy.rabotyagov@cleura.com>

--- a/zuul.d/project-templates.yaml
+++ b/zuul.d/project-templates.yaml
@@ -134,14 +134,14 @@
     check:
       jobs:
         - openstack-ansible-deploy-infra_distro_lxc-rockylinux-9
-        - openstack-ansible-deploy-infra_distro_lxc-centos-10-stream
+        - openstack-ansible-deploy-infra_distro_lxc-centos-10-stream:
+            voting: false
         - openstack-ansible-deploy-infra_distro_lxc-debian-bookworm
-        - openstack-ansible-deploy-infra_distro_lxc-rockylinux-10
+        - openstack-ansible-deploy-infra_distro_lxc-rockylinux-10:
+            voting: false
         - openstack-ansible-deploy-infra_distro_lxc-ubuntu-noble
     gate:
       jobs:
-        - openstack-ansible-deploy-infra_distro_lxc-rockylinux-9
-        - openstack-ansible-deploy-infra_distro_lxc-centos-10-stream
         - openstack-ansible-deploy-infra_distro_lxc-debian-bookworm
         - openstack-ansible-deploy-infra_distro_lxc-rockylinux-10
         - openstack-ansible-deploy-infra_distro_lxc-ubuntu-noble
