--- a/zuul.d/jobs.yaml
+++ b/zuul.d/jobs.yaml
@@ -650,3 +650,13 @@
       tox_environment:
         DOCKER_REGISTRY: quay.io/gotmax23
         DOCKER_IMAGE_TAG: debian-systemd:bookworm
+
+# Rocky 10
+
+- job:
+    name: openstack-ansible-tox-molecule-rockylinux-10
+    parent: openstack-ansible-tox-molecule
+    vars:
+      tox_environment:
+        DOCKER_REGISTRY: quay.io/rockylinux
+        DOCKER_IMAGE_TAG: rockylinux:10-ubi-init
