--- a/zuul.d/project-templates.yaml
+++ b/zuul.d/project-templates.yaml
@@ -267,6 +267,8 @@
         - openstack-ansible-tox-molecule-debian-bookworm
         - openstack-ansible-tox-molecule-ubuntu-noble
         - openstack-ansible-tox-molecule-centos-10-stream
+        - openstack-ansible-tox-molecule-rockylinux-10:
+            voting: false
     gate:
       jobs:
         - openstack-ansible-tox-molecule-debian-bookworm
