Use roles from top of unmaintained branch
After EOM creation we can switch back to branch, so that
whoever tracks unmaintained branch were getting backports.

This also helps CI upgrade jobs to incroporate changes.

Change-Id: Id5f3ced5d710a91b25149b50cc1a0bd93734d678
Signed-off-by: Dmitriy Rabotyagov <dmitriy.rabotyagov@cleura.com>

--- a/ansible-collection-requirements.yml
+++ b/ansible-collection-requirements.yml
@@ -12,7 +12,7 @@ collections:
 - name: openstack.osa
   source: https://opendev.org/openstack/openstack-ansible-plugins
   type: git
-  version: 2023.1-eom
+  version: unmaintained/2023.1
 - name: community.general
   source: https://github.com/ansible-collections/community.general
   type: git
