--- a/ansible-role-requirements.yml
+++ b/ansible-role-requirements.yml
@@ -2,31 +2,31 @@
 - name: ansible-hardening
   scm: git
   src: https://opendev.org/openstack/ansible-hardening
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2024-09-26'
 - name: apt_package_pinning
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-apt_package_pinning
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2023-05-23'
 - name: galera_server
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-galera_server
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2024-06-21'
 - name: ceph_client
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-ceph_client
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2024-04-24'
 - name: haproxy_server
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-haproxy_server
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2024-09-23'
 - name: keepalived
@@ -38,235 +38,235 @@
 - name: lxc_container_create
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-lxc_container_create
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2024-07-07'
 - name: lxc_hosts
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-lxc_hosts
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2023-08-21'
 - name: memcached_server
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-memcached_server
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2023-05-23'
 - name: openstack_hosts
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-openstack_hosts
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2024-11-25'
 - name: os_keystone
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_keystone
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2024-11-25'
 - name: openstack_openrc
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-openstack_openrc
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2023-05-23'
 - name: os_adjutant
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_adjutant
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2023-09-05'
 - name: os_aodh
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_aodh
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2023-08-22'
 - name: os_barbican
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_barbican
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2023-08-22'
 - name: os_blazar
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_blazar
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2023-08-22'
 - name: os_ceilometer
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_ceilometer
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2023-08-20'
 - name: os_cinder
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_cinder
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2024-07-23'
 - name: os_cloudkitty
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_cloudkitty
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2024-06-02'
 - name: os_designate
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_designate
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2024-04-02'
 - name: os_glance
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_glance
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2024-05-07'
 - name: os_gnocchi
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_gnocchi
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2023-11-29'
 - name: os_heat
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_heat
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2024-03-27'
 - name: os_horizon
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_horizon
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2024-03-27'
 - name: os_ironic
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_ironic
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2024-02-13'
 - name: os_magnum
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_magnum
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2024-01-02'
 - name: os_manila
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_manila
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2023-08-22'
 - name: os_masakari
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_masakari
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2023-08-22'
 - name: os_mistral
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_mistral
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2023-08-22'
 - name: os_murano
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_murano
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2023-08-22'
 - name: os_neutron
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_neutron
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2024-10-14'
 - name: os_nova
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_nova
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2024-07-25'
 - name: os_octavia
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_octavia
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2023-10-22'
 - name: os_placement
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_placement
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2023-08-22'
 - name: os_rally
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_rally
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2023-07-05'
 - name: os_sahara
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_sahara
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2023-08-30'
 - name: os_senlin
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_senlin
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2023-08-22'
 - name: os_swift
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_swift
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2023-08-20'
 - name: os_tacker
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_tacker
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2023-08-22'
 - name: os_tempest
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_tempest
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2024-07-10'
 - name: os_trove
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_trove
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2024-05-01'
 - name: os_zun
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-os_zun
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2023-08-22'
 - name: qdrouterd
   scm: git
   src: https://opendev.org/openstack/ansible-role-qdrouterd
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2023-05-23'
 - name: rabbitmq_server
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-rabbitmq_server
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2024-06-02'
 - name: repo_server
   scm: git
   src: https://opendev.org/openstack/openstack-ansible-repo_server
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2023-05-23'
 - name: etcd
@@ -308,42 +308,42 @@
 - name: systemd_service
   src: https://opendev.org/openstack/ansible-role-systemd_service
   scm: git
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2023-05-23'
 - name: systemd_mount
   src: https://opendev.org/openstack/ansible-role-systemd_mount
   scm: git
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2023-07-24'
 - name: systemd_networkd
   src: https://opendev.org/openstack/ansible-role-systemd_networkd
   scm: git
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2024-02-12'
 - name: python_venv_build
   src: https://opendev.org/openstack/ansible-role-python_venv_build
   scm: git
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2024-07-09'
 - name: uwsgi
   src: https://opendev.org/openstack/ansible-role-uwsgi
   scm: git
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2024-08-04'
 - name: pki
   src: https://opendev.org/openstack/ansible-role-pki
   scm: git
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2023-08-29'
 - name: zookeeper
   src: https://opendev.org/openstack/ansible-role-zookeeper
   scm: git
-  version: 2023.1-eom
+  version: unmaintained/2023.1
   trackbranch: unmaintained/2023.1
   shallow_since: '2023-10-09'
