--- a/etc/openstack_deploy/openstack_user_config.yml.pod.example
+++ b/etc/openstack_deploy/openstack_user_config.yml.pod.example
@@ -290,9 +290,7 @@ pod4_hosts: &pod4
 
 # galera, memcache, rabbitmq, utility
 shared-infra_hosts: &controllers
-  <<: *pod1
-  <<: *pod2
-  <<: *pod3
+  <<: [*pod1, *pod2, *pod3]
 
 # repository (apt cache, python packages, etc)
 repo-infra_hosts: *controllers
